--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven-deploy-plugin.version>2.5</maven-deploy-plugin.version>
         <maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
         <powermock.version>1.6.5</powermock.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
