--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
+   <!--                 <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>1.5</version>
@@ -190,7 +190,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
+-->                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-deploy-plugin</artifactId>
                         <version>2.8.2</version>
