Include integration tests in verification.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: java
 jdk: oraclejdk8
 before_install:
 - mvn versions:set -DnewVersion=0.1.$TRAVIS_BUILD_NUMBER
-script: mvn test jacoco:report coveralls:report
+script: mvn verify jacoco:report coveralls:report
 after_success:
 - git clone -b travis `git config --get remote.origin.url` $DEPLOY
 - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in $DEPLOY/pubring.gpg.enc -out $DEPLOY/pubring.gpg -d
