--- a/src/test/resources/webapp/WEB-INF/web.xml
+++ b/src/test/resources/webapp/WEB-INF/web.xml
@@ -12,9 +12,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            classpath:rest-factory-context.xml
-        </param-value>
+        <param-value>classpath:rest-factory-context.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
