Extend verification so that simple integration tests can be written against the monitors and clients.  Add exclusion for spring framework aop interfaces.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.tcurrie</groupId>
     <artifactId>rest.factory</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2.68</version>
 
     <name>Simple Rest Factory</name>
     <description>Simple rest client-server factory, you give it a url, it does the rest!</description>
